# rust-hdl-pcb

./: Cargo.toml  README.md
rust-hdl-digikey-py/: runme.sh
rust-hdl-pcb/: test_circuit_manual.sch
rust-hdl-pcb-schematic-egui/: Cargo.toml  build_web.sh
rust-hdl-pcb-schematic-egui/docs/: index.html
rust-hdl-pcb-schematic-egui/src/: app.rs  main.rs
rust-hdl-pcb-schematic-layout-tool/: index.html
rust-hdl-pcb-schematic-layout-tool/html/: rust_hdl_pcb_schematic_layout_tool.html
rust-hdl-pcb-schematic-layout-tool/src/: examples  examples.in  main.rs
