[package]
name = "rust-hdl-pcb-schematic-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
rust-hdl-pcb-core = {path="../rust-hdl-pcb-core"}
rust-hdl-pcb = {path="../rust-hdl-pcb"}
uuid = {version="0.8.2", features=["serde", "v4", "wasm-bindgen"]}

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

